[package]
name = "azure_sas_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"
azure_identity = "0.21.0"
azure_storage_blobs = "0.21.0"
azure_storage = "0.21.0"
azure_core = "0.21.0"
time = "0.3.44"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
url = "2"
kube = "2.0.1"
k8s-openapi = { version = "0.26.0", features = ["v1_30"] }
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
