[package]
name = "azure_sas_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Async runtime ---
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"

# --- Azure SDK ---
azure_identity = "0.21.0"
azure_storage_blobs = "0.21.0"
azure_storage = "0.21.0"
azure_core = "0.21.0"

# --- Core / time ---
time = { version = "0.3.44", features = ["formatting"] }
humantime = "2.3.0"
anyhow = "1.0"
thiserror = "2.0.17"
url = "2"

# --- Kubernetes client + runtime + derive macros ---
kube = { version = "2.0.1", features = ["runtime", "derive", "client", "jsonpatch"] }
k8s-openapi = { version = "0.26.0", features = ["v1_30"] }

# --- Serialization + schema for CRD ---
serde = { version = "1.0", features = ["derive"] }
schemars = "1.1.0"

# --- Async utils + logging ---
futures = "0.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter","fmt","json"] }

# --- Misc ---
serde_json = "1.0.145"
serde_yaml = "0.9"
